// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > should render the Header component correctly 1`] = `
<div>
  <div>
    <button
      data-testid="connect-test-button"
    />
  </div>
  <div
    align="start"
    class="sc-blHHSb jWUilC"
    position="left"
    spacing="0"
    style="width: 100vw;"
  >
    <header
      class="sc-hSyjfr biBEFF"
    >
      <img
        class="sc-kLJHhQ bIKoSH"
        src="/src/assets/icons/logo-dark.svg"
      />
    </header>
    <nav
      class="sc-ePpfBx fSjOgG"
    >
      <a
        class="sc-dwGkES dHuitN"
        href="/dashboard"
      >
        Dashboard
      </a>
      <a
        class="sc-dwGkES dHuitN"
        href="/exchange"
      >
        Exchange
      </a>
      <a
        class="sc-dwGkES dHuitN"
        href="/dashboard/faucet"
      >
        Faucet
      </a>
      <a
        class="sc-dwGkES dHuitN"
        href="https://station.non-prod.sphx.dev"
        target="_blank"
      >
        Station
      </a>
      <a
        class="sc-dwGkES dHuitN"
        href="https://explorer.sphx.dev"
        target="_blank"
      >
        Explorer
      </a>
      <button
        class="sc-fAUdSK iHBsqq"
        variant="secondary"
      >
        Add Chain
      </button>
      <span
        class="sc-dntaoT hkozYz"
      >
        <button
          class="sc-fAUdSK gxMJIT"
          variant="primary"
        >
          Connect
        </button>
      </span>
    </nav>
  </div>
  <div
    id="modal-root"
  />
</div>
`;

exports[`Header Component > should render the Nav component 1`] = `
<nav
  class="sc-ePpfBx fSjOgG"
>
  <a
    class="sc-dwGkES dHuitN"
    href="/dashboard"
  >
    Dashboard
  </a>
  <a
    class="sc-dwGkES dHuitN"
    href="/exchange"
  >
    Exchange
  </a>
  <a
    class="sc-dwGkES dHuitN"
    href="/dashboard/faucet"
  >
    Faucet
  </a>
  <a
    class="sc-dwGkES dHuitN"
    href="https://station.non-prod.sphx.dev"
    target="_blank"
  >
    Station
  </a>
  <a
    class="sc-dwGkES dHuitN"
    href="https://explorer.sphx.dev"
    target="_blank"
  >
    Explorer
  </a>
  <button
    class="sc-fAUdSK iHBsqq"
    variant="secondary"
  >
    Add Chain
  </button>
  <span
    class="sc-dntaoT hkozYz"
  >
    <button
      class="sc-fAUdSK gxMJIT"
      variant="primary"
    >
      Connect
    </button>
  </span>
</nav>
`;
